kubernetes/030-nginx-static.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-static
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-static
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      imagePullSecrets:      
      - name: regcred
      containers:
      - name: nginx-static
        image: jbarnett/jamesbarnett.io:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "128Mi"
