kubernetes/040-reddit-lite.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-lite
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: reddit-lite
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-lite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit-lite
  template:
    metadata:
      labels:
        app: reddit-lite
    spec:
      containers:
      - name: reddit-lite
        image: jbarnett/reddit-lite:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "256Mi"
