kubernetes/050-tfl-status.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfl-status
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9001
  selector:
    app: tfl-status
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfl-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfl-status
  template:
    metadata:
      labels:
        app: tfl-status
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: tfl-status
        image: jbarnett/jamesbarnett.io:tfl
        ports:
        - containerPort: 9001
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "64Mi"
